// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FullWidthRow returns a table row with correct colSpan and content 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="MuiTableRow-root css-xbnhev-MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-sizeMedium css-1ougeao-MuiTableCell-root"
          colspan="4"
        >
          <div>
            row content
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`FullWidthTextRow returns a table row with correct colSpan and text wrapped in Typography 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="MuiTableRow-root css-xbnhev-MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-sizeMedium css-1ougeao-MuiTableCell-root"
          colspan="4"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-12gb3o9-MuiTypography-root"
          >
            Text to go in row.
          </p>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`PureUserPermissionsTable renders correctly passing props to children 1`] = `
<div>
  <div>
    <table
      class="MuiTable-root css-o7s2gy-MuiTable-root"
    >
      <thead
        class="MuiTableHead-root css-15wwp11-MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head css-xbnhev-MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeMedium tableCell css-1mofire-MuiTableCell-root"
            scope="col"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 tableHeader css-12gb3o9-MuiTypography-root"
            >
              User Name
            </p>
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-paddingCheckbox MuiTableCell-sizeMedium tableCell css-sdy6gp-MuiTableCell-root"
            scope="col"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 tableHeader css-12gb3o9-MuiTypography-root"
            >
              Admin
            </p>
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-paddingCheckbox MuiTableCell-sizeMedium tableCell css-sdy6gp-MuiTableCell-root"
            scope="col"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 tableHeader css-12gb3o9-MuiTypography-root"
            >
              User
            </p>
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-paddingCheckbox MuiTableCell-sizeMedium tableCell css-sdy6gp-MuiTableCell-root"
            scope="col"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 tableHeader css-12gb3o9-MuiTypography-root"
            >
              Viewer
            </p>
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-paddingCheckbox MuiTableCell-sizeMedium tableCell css-sdy6gp-MuiTableCell-root"
            scope="col"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 tableHeader css-12gb3o9-MuiTypography-root"
            />
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root css-xbnhev-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-z0f9zk-MuiTableCell-root"
            colspan="5"
          >
            <span
              class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1a30p6q-MuiCircularProgress-root"
              role="progressbar"
              style="width: 40px; height: 40px;"
            >
              <svg
                class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
                viewBox="22 22 44 44"
              >
                <circle
                  class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
                  cx="44"
                  cy="44"
                  fill="none"
                  r="20.2"
                  stroke-width="3.6"
                />
              </svg>
            </span>
          </td>
        </tr>
      </tbody>
    </table>
    <div>
      RemoveUserDialog mock 
      {"classes":{"activeSelection":"activeSelection","implicitSelection":"implicitSelection","tableHeader":"tableHeader","tableCell":"tableCell"}}
    </div>
  </div>
</div>
`;

exports[`UserPermissionsTable renders pure component with correct props 1`] = `
<div>
  <div>
    <table
      class="MuiTable-root css-o7s2gy-MuiTable-root"
    >
      <thead
        class="MuiTableHead-root css-15wwp11-MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head css-xbnhev-MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeMedium UserPermissionsTable-tableCell-4 css-1mofire-MuiTableCell-root"
            scope="col"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 UserPermissionsTable-tableHeader-3 css-12gb3o9-MuiTypography-root"
            >
              User Name
            </p>
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-paddingCheckbox MuiTableCell-sizeMedium UserPermissionsTable-tableCell-4 css-sdy6gp-MuiTableCell-root"
            scope="col"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 UserPermissionsTable-tableHeader-3 css-12gb3o9-MuiTypography-root"
            >
              Admin
            </p>
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-paddingCheckbox MuiTableCell-sizeMedium UserPermissionsTable-tableCell-4 css-sdy6gp-MuiTableCell-root"
            scope="col"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 UserPermissionsTable-tableHeader-3 css-12gb3o9-MuiTypography-root"
            >
              User
            </p>
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-paddingCheckbox MuiTableCell-sizeMedium UserPermissionsTable-tableCell-4 css-sdy6gp-MuiTableCell-root"
            scope="col"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 UserPermissionsTable-tableHeader-3 css-12gb3o9-MuiTypography-root"
            >
              Viewer
            </p>
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-paddingCheckbox MuiTableCell-sizeMedium UserPermissionsTable-tableCell-4 css-sdy6gp-MuiTableCell-root"
            scope="col"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 UserPermissionsTable-tableHeader-3 css-12gb3o9-MuiTypography-root"
            />
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root css-xbnhev-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-z0f9zk-MuiTableCell-root"
            colspan="5"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-12gb3o9-MuiTypography-root"
            >
              No users have project permissions.
            </p>
          </td>
        </tr>
      </tbody>
    </table>
    <div>
      RemoveUserDialog mock 
      {"classes":{"activeSelection":"UserPermissionsTable-activeSelection-1","implicitSelection":"UserPermissionsTable-implicitSelection-2","tableHeader":"UserPermissionsTable-tableHeader-3","tableCell":"UserPermissionsTable-tableCell-4","dialogDeleteUserButton":"UserPermissionsTable-dialogDeleteUserButton-5"},"state":{"open":false,"user":null},"projectKey":"testproj"}
    </div>
  </div>
</div>
`;

exports[`UserPermissionsTableBody when fetching data renders progress indicator 1`] = `
<tr
  class="MuiTableRow-root css-xbnhev-MuiTableRow-root"
>
  <td
    class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-sizeMedium css-1ougeao-MuiTableCell-root"
    colspan="5"
  >
    <span
      class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1a30p6q-MuiCircularProgress-root"
      role="progressbar"
      style="width: 40px; height: 40px;"
    >
      <svg
        class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
          cx="44"
          cy="44"
          fill="none"
          r="20.2"
          stroke-width="3.6"
        />
      </svg>
    </span>
  </td>
</tr>
`;

exports[`UserPermissionsTableBody when there are users correctly renders row for each user 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="MuiTableRow-root css-xbnhev-MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-sizeMedium tableCell css-1yyjf55-MuiTableCell-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-12gb3o9-MuiTypography-root"
          >
            admin name
             (
            verified
            )
          </p>
        </td>
        <td>
          CheckboxCell mock 
          {"user":{"name":"admin name","userId":"admin-user-id","role":"admin","verified":true},"isCurrentUser":true,"checkboxSpec":{"name":"admin","value":2},"projectKey":"projectKey","classes":{"activeSelection":"activeSelection","implicitSelection":"implicitSelection","tableHeader":"tableHeader","tableCell":"tableCell"},"cellKey":"row-0-admin"}
        </td>
        <td>
          CheckboxCell mock 
          {"user":{"name":"admin name","userId":"admin-user-id","role":"admin","verified":true},"isCurrentUser":true,"checkboxSpec":{"name":"user","value":1},"projectKey":"projectKey","classes":{"activeSelection":"activeSelection","implicitSelection":"implicitSelection","tableHeader":"tableHeader","tableCell":"tableCell"},"cellKey":"row-0-user"}
        </td>
        <td>
          CheckboxCell mock 
          {"user":{"name":"admin name","userId":"admin-user-id","role":"admin","verified":true},"isCurrentUser":true,"checkboxSpec":{"name":"viewer","value":0},"projectKey":"projectKey","classes":{"activeSelection":"activeSelection","implicitSelection":"implicitSelection","tableHeader":"tableHeader","tableCell":"tableCell"},"cellKey":"row-0-viewer"}
        </td>
        <td>
          RemoveUserButtonCell mock 
          {"user":{"name":"admin name","userId":"admin-user-id","role":"admin","verified":true},"isCurrentUser":true,"classes":{"activeSelection":"activeSelection","implicitSelection":"implicitSelection","tableHeader":"tableHeader","tableCell":"tableCell"}}
        </td>
      </tr>
      <tr
        class="MuiTableRow-root css-xbnhev-MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-sizeMedium tableCell css-1yyjf55-MuiTableCell-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-12gb3o9-MuiTypography-root"
          >
            user name
             (
            verified
            )
          </p>
        </td>
        <td>
          CheckboxCell mock 
          {"user":{"name":"user name","userId":"user-user-id","role":"user","verified":true},"isCurrentUser":false,"checkboxSpec":{"name":"admin","value":2},"projectKey":"projectKey","classes":{"activeSelection":"activeSelection","implicitSelection":"implicitSelection","tableHeader":"tableHeader","tableCell":"tableCell"},"cellKey":"row-1-admin"}
        </td>
        <td>
          CheckboxCell mock 
          {"user":{"name":"user name","userId":"user-user-id","role":"user","verified":true},"isCurrentUser":false,"checkboxSpec":{"name":"user","value":1},"projectKey":"projectKey","classes":{"activeSelection":"activeSelection","implicitSelection":"implicitSelection","tableHeader":"tableHeader","tableCell":"tableCell"},"cellKey":"row-1-user"}
        </td>
        <td>
          CheckboxCell mock 
          {"user":{"name":"user name","userId":"user-user-id","role":"user","verified":true},"isCurrentUser":false,"checkboxSpec":{"name":"viewer","value":0},"projectKey":"projectKey","classes":{"activeSelection":"activeSelection","implicitSelection":"implicitSelection","tableHeader":"tableHeader","tableCell":"tableCell"},"cellKey":"row-1-viewer"}
        </td>
        <td>
          RemoveUserButtonCell mock 
          {"user":{"name":"user name","userId":"user-user-id","role":"user","verified":true},"isCurrentUser":false,"classes":{"activeSelection":"activeSelection","implicitSelection":"implicitSelection","tableHeader":"tableHeader","tableCell":"tableCell"}}
        </td>
      </tr>
      <tr
        class="MuiTableRow-root css-xbnhev-MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-sizeMedium tableCell css-1yyjf55-MuiTableCell-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-12gb3o9-MuiTypography-root"
          >
            viewer name
             (
            verified
            )
          </p>
        </td>
        <td>
          CheckboxCell mock 
          {"user":{"name":"viewer name","userId":"viewer-user-id","role":"viewer","verified":true},"isCurrentUser":false,"checkboxSpec":{"name":"admin","value":2},"projectKey":"projectKey","classes":{"activeSelection":"activeSelection","implicitSelection":"implicitSelection","tableHeader":"tableHeader","tableCell":"tableCell"},"cellKey":"row-2-admin"}
        </td>
        <td>
          CheckboxCell mock 
          {"user":{"name":"viewer name","userId":"viewer-user-id","role":"viewer","verified":true},"isCurrentUser":false,"checkboxSpec":{"name":"user","value":1},"projectKey":"projectKey","classes":{"activeSelection":"activeSelection","implicitSelection":"implicitSelection","tableHeader":"tableHeader","tableCell":"tableCell"},"cellKey":"row-2-user"}
        </td>
        <td>
          CheckboxCell mock 
          {"user":{"name":"viewer name","userId":"viewer-user-id","role":"viewer","verified":true},"isCurrentUser":false,"checkboxSpec":{"name":"viewer","value":0},"projectKey":"projectKey","classes":{"activeSelection":"activeSelection","implicitSelection":"implicitSelection","tableHeader":"tableHeader","tableCell":"tableCell"},"cellKey":"row-2-viewer"}
        </td>
        <td>
          RemoveUserButtonCell mock 
          {"user":{"name":"viewer name","userId":"viewer-user-id","role":"viewer","verified":true},"isCurrentUser":false,"classes":{"activeSelection":"activeSelection","implicitSelection":"implicitSelection","tableHeader":"tableHeader","tableCell":"tableCell"}}
        </td>
      </tr>
      <tr
        class="MuiTableRow-root css-xbnhev-MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-sizeMedium tableCell css-1yyjf55-MuiTableCell-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-12gb3o9-MuiTypography-root"
          >
            unverified viewer name
             (
            not verified
            )
          </p>
        </td>
        <td>
          CheckboxCell mock 
          {"user":{"name":"unverified viewer name","userId":"unverified-viewer-user-id","role":"viewer","verified":false},"isCurrentUser":false,"checkboxSpec":{"name":"admin","value":2},"projectKey":"projectKey","classes":{"activeSelection":"activeSelection","implicitSelection":"implicitSelection","tableHeader":"tableHeader","tableCell":"tableCell"},"cellKey":"row-3-admin"}
        </td>
        <td>
          CheckboxCell mock 
          {"user":{"name":"unverified viewer name","userId":"unverified-viewer-user-id","role":"viewer","verified":false},"isCurrentUser":false,"checkboxSpec":{"name":"user","value":1},"projectKey":"projectKey","classes":{"activeSelection":"activeSelection","implicitSelection":"implicitSelection","tableHeader":"tableHeader","tableCell":"tableCell"},"cellKey":"row-3-user"}
        </td>
        <td>
          CheckboxCell mock 
          {"user":{"name":"unverified viewer name","userId":"unverified-viewer-user-id","role":"viewer","verified":false},"isCurrentUser":false,"checkboxSpec":{"name":"viewer","value":0},"projectKey":"projectKey","classes":{"activeSelection":"activeSelection","implicitSelection":"implicitSelection","tableHeader":"tableHeader","tableCell":"tableCell"},"cellKey":"row-3-viewer"}
        </td>
        <td>
          RemoveUserButtonCell mock 
          {"user":{"name":"unverified viewer name","userId":"unverified-viewer-user-id","role":"viewer","verified":false},"isCurrentUser":false,"classes":{"activeSelection":"activeSelection","implicitSelection":"implicitSelection","tableHeader":"tableHeader","tableCell":"tableCell"}}
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`UserPermissionsTableBody when there is an error fetching renders correctly displaying there is an error 1`] = `
<tr
  class="MuiTableRow-root css-xbnhev-MuiTableRow-root"
>
  <td
    class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-sizeMedium css-1ougeao-MuiTableCell-root"
    colspan="5"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-12gb3o9-MuiTypography-root"
    >
      Error fetching data. Please try refreshing the page.
    </p>
  </td>
</tr>
`;

exports[`UserPermissionsTableHead renders correct header bar based on column headings 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="MuiTableRow-root css-xbnhev-MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-alignLeft MuiTableCell-sizeMedium tableCell css-1yyjf55-MuiTableCell-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 tableHeader css-12gb3o9-MuiTypography-root"
          >
            not check box
          </p>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingCheckbox MuiTableCell-sizeMedium tableCell css-1h6bb6-MuiTableCell-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 tableHeader css-12gb3o9-MuiTypography-root"
          >
            check box col
          </p>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`UserPermissionsTableRow for a given user correctly renders passing props to children when not current user 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="MuiTableRow-root css-xbnhev-MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-sizeMedium tableCell css-1yyjf55-MuiTableCell-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-12gb3o9-MuiTypography-root"
          >
            admin name
             (
            verified
            )
          </p>
        </td>
        <td>
          CheckboxCell mock 
          {"user":{"name":"admin name","role":"admin","verified":true},"isCurrentUser":false,"checkboxSpec":{"name":"admin","value":2},"projectKey":"projectKey","classes":{"activeSelection":"activeSelection","implicitSelection":"implicitSelection","tableCell":"tableCell"},"cellKey":"row-2-admin"}
        </td>
        <td>
          CheckboxCell mock 
          {"user":{"name":"admin name","role":"admin","verified":true},"isCurrentUser":false,"checkboxSpec":{"name":"user","value":1},"projectKey":"projectKey","classes":{"activeSelection":"activeSelection","implicitSelection":"implicitSelection","tableCell":"tableCell"},"cellKey":"row-2-user"}
        </td>
        <td>
          CheckboxCell mock 
          {"user":{"name":"admin name","role":"admin","verified":true},"isCurrentUser":false,"checkboxSpec":{"name":"viewer","value":0},"projectKey":"projectKey","classes":{"activeSelection":"activeSelection","implicitSelection":"implicitSelection","tableCell":"tableCell"},"cellKey":"row-2-viewer"}
        </td>
        <td>
          RemoveUserButtonCell mock 
          {"user":{"name":"admin name","role":"admin","verified":true},"isCurrentUser":false,"classes":{"activeSelection":"activeSelection","implicitSelection":"implicitSelection","tableCell":"tableCell"}}
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
